Update FeedUrl entity and controller; update relations in category controller; update swagger docs
