# src/controllers/category.ts
@@ -2,7 +2,7 @@ import { getRepository } from 'typeorm'
 import { Category } from 'entities'
 
 const relations = [
-  'category', 'categories', 'episodes', 'mediaRefs', 'podcasts'
+  'category', 'categories'
 ]
 
 const getCategory = (id) => {
